# geo-compliance-classifier

./: .gitignore  ARTIFACT_PREPROCESSOR_SCHEMA_UPDATE.md  FEATURE_QUERY_GUIDE.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MCP_FRESH_IMPLEMENTATION.md  MCP_VERIFICATION_REPORT.md  PROJECT_TOOLS_DOCUMENTATION.md  RAG_LLM_TEST_RESULTS.md  README.md  README_740.md  README_FINAL.md  README_MCP.md  SYSTEM_SUMMARY.md  compliance_validation_20250829_175644.md  compliance_validation_20250829_190837.md  config.yaml  datascraper.py  demo_active_learning.py  demo_confidence_validator.py  evidence_export.csv  evidence_verification_20250829_181323.md  final_audit_export.csv  pdfscraper.py  pyproject.toml  query_features.py  quick_production_test.py  requirements.txt  requirements_dev.txt  requirements_retriever.txt  simulated_evaluation_results.json  start_mcp_service.py  terminology.csv  test_active_learning_patterns.py  test_all_agents.py  test_api_comprehensive.py  test_ensemble_logic.py  test_evidence_system.py  test_evidence_verification.py  test_llm_only.py  (+7 more)
.github/: pull_request_template.md
Compliance Dashboard/: README.md  index.html  package.json
Markdown/: ACTIVE_LEARNING_SUMMARY.md  CENTRALIZED_RAG_INTEGRATION_COMPLETE.md  EVIDENCE_VERIFICATION_SUMMARY.md  FINAL_SYSTEM_STATUS.md  FOLDER_STRUCTURE_CLEANUP_COMPLETE.md  PROJECT_COMPREHENSIVE_REVIEW_COMPLETE.md  RAG_INTEGRATION_STATUS.md  RAG_SYSTEM_RESULTS.md  README.md  README_CENTRALIZED_RAG.md  WORKFLOW.md  evidence_verification_20250829_190844.md
active_learning_data/: README.md  corrections.json  feedback.json  patterns.json
artifact_preprocessor/: README.md  __init__.py  __main__.py  cli.py  expand_terms.py  extract.py  io_utils.py  logging_conf.py  normalize.py  reporter.py  schema.py
compliance_reports/: 2025-08-31-COMPLIANCE-internal.csv  2025-08-31-COMPLIANCE-internal.html  2025-08-31-COMPLIANCE-regulator.html
config/: README.md  centralized_rag_config.yaml
demo_output/: distribution_report.md  generated_features.jsonl
demo_output2/: generated_features.csv  generated_features.jsonl
demos/: README.md  demo_active_learning.py  demo_confidence_validator.py  demo_evidence_verifier.py
docs/: README.md  api-reference.md  installation.md  troubleshooting.md
eval/: README.md  queries.json  run_eval.py
generated_features/: generated_features.csv
generated_output/: augmented_features.csv  feature_generation_report.md
human-reviews/: README.md  (+4 more)
(+157 files in other folders)
